# dblib

./: CMakeLists.txt  LICENSE  README.md
include/dblib/: dblib.hpp  dblib_conf.hpp  dblib_consts.hpp  dblib_cvt_utils.hpp  dblib_exception.hpp  dblib_firebird.hpp  dblib_postgresql.hpp  dblib_sqlite.hpp
include/dblib/sqlite_c_api/: sqlite3.h
src/: dblib.cpp  dblib_consts.cpp  dblib_cvt_utils.cpp  dblib_dyn.cpp  dblib_dyn.hpp  dblib_exception.cpp  dblib_firebird.cpp  dblib_postgresql.cpp  dblib_sqlite.cpp  dblib_stmt_tools.cpp  dblib_stmt_tools.hpp  dblib_type_cvt.hpp
tests/: dblib_tests.cpp  dblib_tests.sln  dblib_tests.vcxproj  dblib_tests.vcxproj.filters  postresql-prerequisites.sh
